--- a/interests-section/interests.less
+++ b/interests-section/interests.less
@@ -2,7 +2,7 @@
   margin-top: @medium-margin;
   margin-bottom: @large-margin;
   position: relative;
-  height: 750px;
+  height: 650px;
   // change on desktop to 1000px;
   .intro-note {
     h1 {
@@ -26,7 +26,7 @@
     .interest {
       .flex-mixin(column);
       align-items: center;
-      width: 47%;
+      width: 40%;
       margin: 0.5rem;
       box-shadow: 0 4px 8px 0 rgb(78, 76, 76), 0 6px 20px 0 rgb(78, 76, 76);
       .img {
